		The constructors were revamped, and new ones added.  Children
		SimpleInspectors now use the same max properties as their parents.
	GUIState.getMaximumPropertiesForInspector() added
	Updated wcss tutorial organization
	Deleted mason.1.3.1.command

Version 17
	Minor tweaks to Ant.java.  Thanks to Amit Goel <subs@agoel.com>
	Bug fix to tutorials in documentation.  Thanks to Jonathan Rowe
		<J.E.Rowe@cs.bham.ac.uk>
	SimpleProperties now treats toString() as a property for all CharSequence
		subclasses.
	Error in displaying "More Options" window in Display3D fixed.  Thanks to Jon
		Rowe <J.E.Rowe@cs.bham.ac.uk>
	Added sim.util.distribution to the Makefile (oops).  Thanks to Chris Hollander
		<chris.hollander@gmail.com>
	Made all classes in sim.util.distributions Serializable
	Added a fixed serialVerUID (=1) to all Serializable classes
	Various tweaks and fixes.  Thanks to Richard Legendi <rlegendi@aitia.ai>
	Added Interval.contains(Number) and Interval.contains(doube).  Thanks to
		Benjamin Axelrod <baxelrod@irobot.com>
	Added functions to Double3D.  Thanks to Benjamin Axelrod 
		<baxelrod@irobot.com>
	Tweaks to Double3D and Double2D's normalize() and resize() functions.
        Updated MersenneTwister and MersenneTwisterFast to allow full-open, half-open 
		(both directions) and fully-closed intervals for nextDouble and nextFloat
	getDom() updated to reflect locale-specific number formatting.  Thanks to
		Richard Legendi <rlegendi@aitia.ai>
	The Console's model-selection box no longer issues an error if you click on the
		close box or press ESCAPE.  Thanks to Richard Legendi <rlegendi@aitia.ai>
	HistogramGenerator and ScatterPlotGenerator no longer issue an error when a
		display is closed which contains either generator as a component.
        Removed vestigial references to 0xffffffff in MersenneTwister and 
                MersenneTwisterFast.  Thanks to Bruce Haxton <bruce.haxton@yahoo.com>
	Tweaks to Woims3D to make the woims slightly less elongated.